--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ Temporary Items
 .apdisk
 
 ### Swift ###
+*Secrets.swift
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
